ver 0.18.23 (not yet released)
* despotify: remove defunct plugin
* fix gcc 5.0 warnings

ver 0.18.22 (2014/01/14)
* fix clang 3.6 warnings

ver 0.18.21 (2014/12/17)
* playlist
  - embcue: fix filename suffix detection
* decoder
  - ffmpeg: fix time stamp underflow

ver 0.18.20 (2014/12/08)
* decoder
  - ffmpeg: support FFmpeg 2.5
* fix build failure with musl

ver 0.18.19 (2014/11/26)
* archive
  - zzip: fix crash after seeking

ver 0.18.18 (2014/11/18)
* decoder
  - ffmpeg: support opus
* fix crash on failed filename charset conversion
* fix local socket detection from uid=0 (root)

ver 0.18.17 (2014/11/02)
* playlist
  - don't allow empty playlist name
  - m3u: recognize the file suffix ".m3u8"
* decoder
  - ignore URI query string for plugin detection
  - faad: remove workaround for ancient libfaad2 ABI bug
  - ffmpeg: recognize MIME type audio/aacp

ver 0.18.16 (2014/09/26)
* fix DSD breakage due to typo in configure.ac

ver 0.18.15 (2014/09/26)
* command
  - list: reset used size after the list has been processed
* fix MixRamp
* work around build failure on NetBSD

ver 0.18.14 (2014/09/11)
* protocol
  - fix range parser bug on certain 32 bit architectures
* decoder
  - audiofile: fix crash after seeking
  - ffmpeg: fix crash with ffmpeg/libav version 11
  - fix assertion failure after seeking

ver 0.18.13 (2014/08/31)
* protocol
  - don't change song on "seekcur" in random mode
* decoder
  - dsdiff, dsf: fix endless loop on malformed file
  - ffmpeg: support ffmpeg/libav version 11
  - gme: fix song duration
* output
  - alsa: fix endless loop at end of file in dsd_usb mode
* fix state file saver
* fix build failure on Darwin

ver 0.18.12 (2014/07/30)
* database
  - proxy: fix build failure with libmpdclient 2.2
  - proxy: fix add/search and other commands with libmpdclient < 2.9
* decoder
  - audiofile: improve responsiveness
  - audiofile: fix WAV stream playback
  - dsdiff, dsf: fix stream playback