@@ -1,5 +1,6 @@
 ver 0.18.23 (not yet released)
 * despotify: remove defunct plugin
+* fix clock integer overflow on OS X
 * fix gcc 5.0 warnings
 
 ver 0.18.22 (2014/01/14)
